<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming_event">Upcoming Event</string>
    <string name="title_finished_event">Finished Event</string>
    <string name="title_detail_event">Detail Event</string>
    <string name="title_settings">Settings</string>
    <string name="title_theme">Theme</string>
    <string name="title_notification">Notification</string>
    <string name="title_reminder">Daily Reminder</string>
    <string name="title_mode">Dark Mode</string>
    <string name="summary_off_mode">Dark mode is disabled</string>
    <string name="summary_on_mode">Dark mode is enabled</string>
    <string name="summary_off_reminder">You will not get a notification when the upcoming event will be held</string>
    <string name="summary_on_reminder">Send a notification when the upcoming event will be held</string>
    <string name="txt_time" formatted="false">
        "Jadwal Pelaksanaan\n"
        "Mulai    : %s\n"
        "Selesai : %s"
    </string>
    <string name="txt_owner">Penyelenggara: %s</string>
    <string name="txt_quota">Kuota: %d</string>
    <string name="txt_location">Lokasi: %s</string>
    <string name="desc_img_detail">Event Image Cover</string>
    <string name="btn_register">Register</string>
    <string name="btn_favorite">Favorite</string>
    <string name="desc_img_item">Event Image Item</string>
    <string name="title_motivation">Dicoding Event</string>
    <string name="txt_motivation">Kembangkan jaringan dan belajar dari developer terbaik</string>
    <string name="txt_hint_search">Search title</string>
    <string name="txt_not_found">Event yang kamu cari tidak dapat ditemukan</string>
    <string name="txt_no_upcoming_event">Tidak ada Event yang aktif saat ini</string>
    <string name="txt_no_finished_event">Tidak ada Event yang sudah selesai</string>
    <string name="txt_no_data">Tidak ada data</string>
    <string name="txt_error_db">Gagal mengambil data dari database</string>
    <string name="toast_txt_no_internet">Failed to fetch new data! Please check your internet connection</string>
    <string name="txt_no_internet">Gagal mendapatkan data dari internet</string>
    <string name="txt_minutes">%d menit</string>
    <string name="txt_hours">%d jam</string>
    <string name="txt_days">%d hari</string>
    <string name="txt_finished">Selesai</string>
    <string name="title_notif_denied">Notification Permission Denied</string>
    <string name="msg_notif_denied">You have denied notification permission. To enable notifications, please go to app settings and grant the permission manually.</string>
    <string name="title_notif_req">Notification Permission Required</string>
    <string name="msg_notif_req">This app needs notification permission to send you daily reminders. Please grant the permission.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_go_setting">Settings</string>
    <string name="btn_grant">Grant</string>
    <string name="title_favorite">Favorite</string>
    <string name="desc_rv_favorite">Favorite event data list</string>
    <string name="desc_rv_upcoming">Upcoming event data list</string>
    <string name="desc_rv_finished">Finished event data list</string>
    <string name="key_daily_reminder">daily_reminder</string>
    <string name="key_dark_mode">dark_mode</string>
    <string name="txt_permission_granted">Notifications permission granted</string>
    <string name="desc_profile">Photo Profile</string>
    <string name="txt_full_name">Ikhsan Maulana</string>
    <string name="txt_email">ikhsanmaulana384@gmail.com</string>
    <string name="desc_share">Share Event</string>
    <string name="title_about">About</string>
    <string name="title_item_list">List Item</string>
    <string name="title_item_grid">Grid Item</string>
    <string name="title_display">Display</string>
</resources>