<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/title_display">
        <menu>
            <item
                android:id="@+id/displayList"
                android:title="@string/title_item_list" />
            <item
                android:id="@+id/displayGrid"
                android:title="@string/title_item_grid" />
        </menu>
    </item>
    <item
        android:id="@+id/settingMenu"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/about_page"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_about"
        app:showAsAction="collapseActionView" />
</menu>