<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_finished_event">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.akhsaul.dicodingevent.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_navigation_home_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming_event"
        android:name="org.akhsaul.dicodingevent.ui.UpcomingEventFragment"
        android:label="@string/title_upcoming_event"
        tools:layout="@layout/fragment_upcoming_event">
        <action
            android:id="@+id/action_navigation_upcoming_event_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_navigation_upcoming_event_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_navigation_upcoming_event_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished_event"
        android:name="org.akhsaul.dicodingevent.ui.FinishedEventFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_finished_event">
        <action
            android:id="@+id/action_navigation_finished_event_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_navigation_finished_event_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_navigation_finished_event_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="org.akhsaul.dicodingevent.ui.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_navigation_favorite_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_navigation_favorite_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="org.akhsaul.dicodingevent.ui.DetailFragment"
        android:label="@string/title_detail_event"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="org.akhsaul.dicodingevent.ui.SettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.akhsaul.dicodingevent.ui.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
</navigation>