<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingBottom="32dp">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_img_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/border_tag_detail"
                android:paddingHorizontal="4dp"
                android:paddingBottom="2dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/ivCover"
                app:layout_constraintStart_toStartOf="@id/ivCover"
                tools:text="Developer Day" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivCover"
                tools:text="elevAIte x Dicoding Live #2 - Copilot Hacks: Rahasia Prompt Engineering Biar AI Kerja Maksimal!" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="elevAIte x Dicoding Live edisi kedua ini akan kupas tuntas seputar bagaimana cara menggunakan copilot." />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvLocation"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSummary"
                tools:text="Sisa Kuota: 2000" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/tvQuota"
                app:layout_constraintTop_toBottomOf="@+id/tvSummary"
                tools:text="Lokasi: Kota Jakarta Selatan" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQuota"
                tools:text="Jadwal Pelaksanaan\nMulai    : 2025-02-11 15:30:00\nSelesai : 2025-02-11 15:30:00" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTime"
                tools:text="Penyelenggara: elevAIte with Dicoding" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOwner"
                tools:text="Di era digital yang terus berkembang" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDesc" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_share"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-24dp"
                android:contentDescription="@string/desc_share"
                android:textAllCaps="false"
                app:icon="@drawable/ic_share_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivCover"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/btn_favorite"
        app:srcCompat="@drawable/ic_no_favorite_24dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
